unpackaged/main/default/objects/CMPL123__WF_History__c/CMPL123__WF_History__c.object-meta.xml
<CustomObject>
    <description>Workflow History</description>
    <label>Workflow History</label>
    <nameField>
        <displayFormat>WFH{0000}</displayFormat>
        <label>History Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>