unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Action__c</fullName>
        <description>Action</description>
        <inlineHelpText>Current Action</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>