unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Change_Summary__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Change_Summary__c</fullName>
        <description>Change Summary</description>
        <inlineHelpText>Change Summary</inlineHelpText>
        <label>Change Summary</label>
        <type>TextArea</type>
    </CustomField>