unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Change_Summary_Long__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Change_Summary_Long__c</fullName>
        <description>Store the Workflow Action activity Logs.</description>
        <label>Change Summary (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>