unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Comment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Comment__c</fullName>
        <description>Comment</description>
        <inlineHelpText>Comment</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </CustomField>