unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Date_Updated__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Date_Updated__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date Updated</label>
        <type>DateTime</type>
    </CustomField>