unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__ESign_Applied__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is E-Sign Applied?</description>
        <inlineHelpText>Check, if E-Sign Applied.</inlineHelpText>
        <label>E-Sign Applied?</label>
        <type>Checkbox</type>
    </CustomField>