unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Last_Modified_DateTime__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Last_Modified_DateTime__c</fullName>
        <description>Last Modified Date Time</description>
        <formula>CMPL123__Date_Updated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last Modified Date Time</inlineHelpText>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </CustomField>