unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Related_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Id__c</fullName>
        <description>Related valid Salesforce record Id</description>
        <inlineHelpText>Related Salesforce Id</inlineHelpText>
        <label>Related Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>