unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Sequence_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Sequence_No__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(Name, 'WFH','')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>