unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Current Status</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>