unpackaged/main/default/objects/CMPL123__WF_History__c/fields/CMPL123__Workflow_Step__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Workflow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Workflow Step</description>
        <inlineHelpText>Workflow Step</inlineHelpText>
        <label>Workflow Step</label>
        <referenceTo>CMPL123__WF_Step__c</referenceTo>
        <relationshipLabel>Workflow History</relationshipLabel>
        <relationshipName>Workflow_History</relationshipName>
        <type>Lookup</type>
    </CustomField>